--- a/app/styles/top-bar.scss
+++ b/app/styles/top-bar.scss
@@ -98,7 +98,7 @@
     position: fixed;
     top: 0;
     flex-direction: row;
-    z-index: 1;
+    z-index: 2;
 
     .close-menu {
       display: none;
